--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2015-02-08  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* src/convertt: Started working on ConvertType.
+
+	* lib/checkset.c (intsmallerequalto): Function Added.
+
+	* include/fixedstringmacros.h (ASTRUTILSBIBTEX): Corrected article
+	name
+
+	* include/checkset.h: Added intsmallerequalto.
+
 2015-01-25  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* ./*: In all files, the name `AstrUtils` was changed to
