--- a/THANKS
+++ b/THANKS
@@ -3,6 +3,7 @@ your name has been left out, if you'd rather not be listed, or if
 you'd prefer a different address be used, please send a note to the
 bug-report mailing list (as seen at end of e.g., astimgcrop --help).
 
+Alan Lefor                           alefor@astr.tohoku.ac.jp
 Brandon Invergo                      brandon@gnu.org
 Karl Berry                           karl@gnu.org
 Mohammad-Reza Khellat                moha.khe@gmail.com
