--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-02-11  Mohammad Akhlaghi  <mohammad@akbari>
+
+	* src/convertt/ui.c (preparearrays): Added.
+
+	* src/convertt/jpeg.c (preparejpeg): Added.
+
+	* doc/gnuastro.texi (Files): Added chapter
+	(ConvertType): Added section
+	(FileInfo): Added section
+
 2015-02-08  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/convertt: Started working on ConvertType.
